Trace for NPM install

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "php artisan optimize",
+            "php artisan key:generate",
+            "php artisan migrate:refresh --seed"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
