--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html":"5.2.*",
         "unisharp/laravel-filemanager": "^1.6",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
