--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/vendor
 /node_modules
 /public/storage
-/public/photos
-/public/files
-Homestead.yaml
+/storage/*.key
+/vendor
+/.idea
 Homestead.json
+Homestead.yaml
 .env
