1. Add Scout 2. 現在可以針對Article全文搜索  	modified:   .env.example  	modified:   app/Core/Eloquent.php  	modified:   composer.json  	modified:   composer.lock  	modified:   config/app.php  	new file:   config/scout.php  	new file:   resources/views/vendor/laravel-filemanager/demo.blade.php  	new file:   resources/views/vendor/notifications/email-plain.blade.php  	new file:   resources/views/vendor/notifications/email.blade.php  	new file:   resources/views/vendor/pagination/bootstrap-4.blade.php  	new file:   resources/views/vendor/pagination/default.blade.php  	new file:   resources/views/vendor/pagination/simple-bootstrap-4.blade.php  	new file:   resources/views/vendor/pagination/simple-default.blade.php

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravelcollective/html":"5.3.*",
         "unisharp/laravel-filemanager": "^1.6",
         "laravel/socialite": "^2.0",
-        "rap2hpoutre/laravel-log-viewer": "^0.7.0"
+        "rap2hpoutre/laravel-log-viewer": "^0.7.0",
+        "laravel/scout": "^1.1",
+        "algolia/algoliasearch-client-php": "^1.11"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
